safemlx-sys/src/mlx-c/mlx/c/event.h

/**
 * \defgroup mlx_event Completion event
 * Backend-independent, single-shot completion events.
 */
/**@{*/

/** An owning opaque completion event. */
typedef struct mlx_event_ {
  void* ctx;
} mlx_event;