safemlx-sys/src/bindings.rs

extern "C" {
    pub fn mlx_swapaxes(
        res: *mut mlx_array,
        a: mlx_array,
        axis1: ::std::os::raw::c_int,
        axis2: ::std::os::raw::c_int,
        s: mlx_stream,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn mlx_take_axis(
        res: *mut mlx_array,
        a: mlx_array,
        indices: mlx_array,
        axis: ::std::os::raw::c_int,
        s: mlx_stream,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn mlx_take(
        res: *mut mlx_array,
        a: mlx_array,
        indices: mlx_array,
        s: mlx_stream,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn mlx_take_along_axis(
        res: *mut mlx_array,
        a: mlx_array,
        indices: mlx_array,
        axis: ::std::os::raw::c_int,
        s: mlx_stream,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn mlx_tan(res: *mut mlx_array, a: mlx_array, s: mlx_stream) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn mlx_tanh(res: *mut mlx_array, a: mlx_array, s: mlx_stream) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn mlx_tensordot(
        res: *mut mlx_array,
        a: mlx_array,
        b: mlx_array,
        axes_a: *const ::std::os::raw::c_int,
        axes_a_num: usize,
        axes_b: *const ::std::os::raw::c_int,
        axes_b_num: usize,
        s: mlx_stream,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn mlx_tensordot_axis(
        res: *mut mlx_array,
        a: mlx_array,
        b: mlx_array,
        axis: ::std::os::raw::c_int,
        s: mlx_stream,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn mlx_tile(
        res: *mut mlx_array,
        arr: mlx_array,
        reps: *const ::std::os::raw::c_int,
        reps_num: usize,
        s: mlx_stream,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn mlx_to_fp8(res: *mut mlx_array, x: mlx_array, s: mlx_stream) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn mlx_topk_axis(
        res: *mut mlx_array,
        a: mlx_array,
        k: ::std::os::raw::c_int,
        axis: ::std::os::raw::c_int,
        s: mlx_stream,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn mlx_topk(
        res: *mut mlx_array,
        a: mlx_array,
        k: ::std::os::raw::c_int,
        s: mlx_stream,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn mlx_trace(
        res: *mut mlx_array,
        a: mlx_array,
        offset: ::std::os::raw::c_int,
        axis1: ::std::os::raw::c_int,
        axis2: ::std::os::raw::c_int,
        dtype: mlx_dtype,
        s: mlx_stream,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn mlx_transpose_axes(
        res: *mut mlx_array,
        a: mlx_array,
        axes: *const ::std::os::raw::c_int,
        axes_num: usize,
        s: mlx_stream,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn mlx_transpose(res: *mut mlx_array, a: mlx_array, s: mlx_stream)
    -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn mlx_tri(
        res: *mut mlx_array,
        n: ::std::os::raw::c_int,
        m: ::std::os::raw::c_int,
        k: ::std::os::raw::c_int,
        type_: mlx_dtype,
        s: mlx_stream,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn mlx_tril(
        res: *mut mlx_array,
        x: mlx_array,
        k: ::std::os::raw::c_int,
        s: mlx_stream,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn mlx_triu(
        res: *mut mlx_array,
        x: mlx_array,
        k: ::std::os::raw::c_int,
        s: mlx_stream,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn mlx_unflatten(
        res: *mut mlx_array,
        a: mlx_array,
        axis: ::std::os::raw::c_int,
        shape: *const ::std::os::raw::c_int,
        shape_num: usize,
        s: mlx_stream,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn mlx_var_axes(
        res: *mut mlx_array,
        a: mlx_array,
        axes: *const ::std::os::raw::c_int,
        axes_num: usize,
        keepdims: bool,
        ddof: ::std::os::raw::c_int,
        s: mlx_stream,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn mlx_var_axis(
        res: *mut mlx_array,
        a: mlx_array,
        axis: ::std::os::raw::c_int,
        keepdims: bool,
        ddof: ::std::os::raw::c_int,
        s: mlx_stream,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn mlx_var(
        res: *mut mlx_array,
        a: mlx_array,
        keepdims: bool,
        ddof: ::std::os::raw::c_int,
        s: mlx_stream,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn mlx_view(
        res: *mut mlx_array,
        a: mlx_array,
        dtype: mlx_dtype,
        s: mlx_stream,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn mlx_where(
        res: *mut mlx_array,
        condition: mlx_array,
        x: mlx_array,
        y: mlx_array,
        s: mlx_stream,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn mlx_zeros(
        res: *mut mlx_array,
        shape: *const ::std::os::raw::c_int,
        shape_num: usize,
        dtype: mlx_dtype,
        s: mlx_stream,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn mlx_zeros_like(
        res: *mut mlx_array,
        a: mlx_array,
        s: mlx_stream,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " \\defgroup random Random number operations\n/\n/**@{"]
    pub fn mlx_random_bernoulli(
        res: *mut mlx_array,
        p: mlx_array,
        shape: *const ::std::os::raw::c_int,
        shape_num: usize,
        key: mlx_array,
        s: mlx_stream,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn mlx_random_bits(
        res: *mut mlx_array,
        shape: *const ::std::os::raw::c_int,
        shape_num: usize,
        width: ::std::os::raw::c_int,
        key: mlx_array,
        s: mlx_stream,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn mlx_random_categorical_shape(
        res: *mut mlx_array,
        logits: mlx_array,
        axis: ::std::os::raw::c_int,
        shape: *const ::std::os::raw::c_int,
        shape_num: usize,
        key: mlx_array,
        s: mlx_stream,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn mlx_random_categorical_num_samples(
        res: *mut mlx_array,
        logits_: mlx_array,
        axis: ::std::os::raw::c_int,
        num_samples: ::std::os::raw::c_int,
        key: mlx_array,
        s: mlx_stream,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn mlx_random_categorical(
        res: *mut mlx_array,
        logits: mlx_array,
        axis: ::std::os::raw::c_int,
        key: mlx_array,
        s: mlx_stream,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn mlx_random_gumbel(
        res: *mut mlx_array,
        shape: *const ::std::os::raw::c_int,
        shape_num: usize,
        dtype: mlx_dtype,
        key: mlx_array,
        s: mlx_stream,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn mlx_random_key(res: *mut mlx_array, seed: u64) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn mlx_random_laplace(
        res: *mut mlx_array,
        shape: *const ::std::os::raw::c_int,
        shape_num: usize,
        dtype: mlx_dtype,
        loc: f32,
        scale: f32,
        key: mlx_array,
        s: mlx_stream,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn mlx_random_multivariate_normal(
        res: *mut mlx_array,
        mean: mlx_array,
        cov: mlx_array,
        shape: *const ::std::os::raw::c_int,
        shape_num: usize,
        dtype: mlx_dtype,
        key: mlx_array,
        s: mlx_stream,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn mlx_random_normal_broadcast(
        res: *mut mlx_array,
        shape: *const ::std::os::raw::c_int,
        shape_num: usize,
        dtype: mlx_dtype,
        loc: mlx_array,
        scale: mlx_array,
        key: mlx_array,
        s: mlx_stream,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn mlx_random_normal(
        res: *mut mlx_array,
        shape: *const ::std::os::raw::c_int,
        shape_num: usize,
        dtype: mlx_dtype,
        loc: f32,
        scale: f32,
        key: mlx_array,
        s: mlx_stream,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn mlx_random_permutation(
        res: *mut mlx_array,
        x: mlx_array,
        axis: ::std::os::raw::c_int,
        key: mlx_array,
        s: mlx_stream,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn mlx_random_permutation_arange(
        res: *mut mlx_array,
        x: ::std::os::raw::c_int,
        key: mlx_array,
        s: mlx_stream,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn mlx_random_randint(
        res: *mut mlx_array,
        low: mlx_array,
        high: mlx_array,
        shape: *const ::std::os::raw::c_int,
        shape_num: usize,
        dtype: mlx_dtype,
        key: mlx_array,
        s: mlx_stream,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn mlx_random_seed(seed: u64) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn mlx_random_split_num(
        res: *mut mlx_array,
        key: mlx_array,
        num: ::std::os::raw::c_int,
        s: mlx_stream,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn mlx_random_split(
        res_0: *mut mlx_array,
        res_1: *mut mlx_array,
        key: mlx_array,
        s: mlx_stream,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn mlx_random_truncated_normal(
        res: *mut mlx_array,
        lower: mlx_array,
        upper: mlx_array,
        shape: *const ::std::os::raw::c_int,
        shape_num: usize,
        dtype: mlx_dtype,
        key: mlx_array,
        s: mlx_stream,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn mlx_random_uniform(
        res: *mut mlx_array,
        low: mlx_array,
        high: mlx_array,
        shape: *const ::std::os::raw::c_int,
        shape_num: usize,
        dtype: mlx_dtype,
        key: mlx_array,
        s: mlx_stream,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " \\defgroup transforms Transform operations\n/\n/**@{"]
    pub fn mlx_async_eval(outputs: mlx_vector_array) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " Submit evaluation of `outputs` and set `event` to its completion token.\n\n This is the operation which records lazy graphs for execution. The existing\n `mlx_async_eval` API is preserved for callers which do not need a token."]
    pub fn mlx_async_eval_with_event(
        event: *mut mlx_event,
        outputs: mlx_vector_array,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " Submit evaluation between asynchronous timestamp markers on `stream`."]
    pub fn mlx_async_eval_timed(
        event: *mut mlx_event,
        outputs: mlx_vector_array,
        stream: mlx_stream,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn mlx_checkpoint(res: *mut mlx_closure, fun: mlx_closure) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn mlx_custom_function(
        res: *mut mlx_closure,
        fun: mlx_closure,
        fun_vjp: mlx_closure_custom,
        fun_jvp: mlx_closure_custom_jvp,
        fun_vmap: mlx_closure_custom_vmap,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn mlx_custom_vjp(
        res: *mut mlx_closure,
        fun: mlx_closure,
        fun_vjp: mlx_closure_custom,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn mlx_eval(outputs: mlx_vector_array) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn mlx_jvp(
        res_0: *mut mlx_vector_array,
        res_1: *mut mlx_vector_array,
        fun: mlx_closure,
        primals: mlx_vector_array,
        tangents: mlx_vector_array,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn mlx_value_and_grad(
        res: *mut mlx_closure_value_and_grad,
        fun: mlx_closure,
        argnums: *const ::std::os::raw::c_int,
        argnums_num: usize,
    ) -> ::std::os::raw::c_int;
}
